feat: update libpgjava to 42.7.3
Java database (JDBC) driver for PostgreSQL

Issue: https://github.com/deepin-community/sig-deepin-sysdev-team/issues/547
Log: update repo