@@ -28,13 +28,24 @@ import org.postgresql.core.TypeInfo;
 import org.postgresql.core.Utils;
 import org.postgresql.core.Version;
 import org.postgresql.fastpath.Fastpath;
+import org.postgresql.geometric.PGbox;
+import org.postgresql.geometric.PGcircle;
+import org.postgresql.geometric.PGline;
+import org.postgresql.geometric.PGlseg;
+import org.postgresql.geometric.PGpath;
+import org.postgresql.geometric.PGpoint;
+import org.postgresql.geometric.PGpolygon;
 import org.postgresql.largeobject.LargeObjectManager;
 import org.postgresql.replication.PGReplicationConnection;
 import org.postgresql.replication.PGReplicationConnectionImpl;
+import org.postgresql.util.DriverInfo;
 import org.postgresql.util.GT;
 import org.postgresql.util.HostSpec;
+import org.postgresql.util.LazyCleaner;
 import org.postgresql.util.LruCache;
 import org.postgresql.util.PGBinaryObject;
+import org.postgresql.util.PGInterval;
+import org.postgresql.util.PGmoney;
 import org.postgresql.util.PGobject;
 import org.postgresql.util.PSQLException;
 import org.postgresql.util.PSQLState;
@@ -47,6 +58,10 @@ import org.postgresql.xml.PGXmlFactoryFactory;
 // import org.checkerframework.dataflow.qual.Pure;
 
 import java.io.IOException;
+import java.lang.invoke.MethodHandle;
+import java.lang.invoke.MethodHandles;
+import java.lang.invoke.MethodType;
+import java.security.Permission;
 import java.sql.Array;
 import java.sql.Blob;
 import java.sql.CallableStatement;
@@ -67,6 +82,7 @@ import java.sql.Statement;
 import java.sql.Struct;
 import java.sql.Types;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.Enumeration;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -79,6 +95,7 @@ import java.util.StringTokenizer;
 import java.util.Timer;
 import java.util.TimerTask;
 import java.util.concurrent.Executor;
+import java.util.concurrent.locks.Condition;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 
@@ -89,11 +106,34 @@ public class PgConnection implements BaseConnection {
   private static final SQLPermission SQL_PERMISSION_ABORT = new SQLPermission("callAbort");
   private static final SQLPermission SQL_PERMISSION_NETWORK_TIMEOUT = new SQLPermission("setNetworkTimeout");
 
+  private static final /* @Nullable */ MethodHandle SYSTEM_GET_SECURITY_MANAGER;
+  private static final /* @Nullable */ MethodHandle SECURITY_MANAGER_CHECK_PERMISSION;
+
+  static {
+    MethodHandle systemGetSecurityManagerHandle = null;
+    MethodHandle securityManagerCheckPermission = null;
+    try {
+      Class<?> securityManagerClass = Class.forName("java.lang.SecurityManager");
+      systemGetSecurityManagerHandle =
+          MethodHandles.lookup().findStatic(System.class, "getSecurityManager",
+              MethodType.methodType(securityManagerClass));
+      securityManagerCheckPermission =
+          MethodHandles.lookup().findVirtual(securityManagerClass, "checkPermission",
+              MethodType.methodType(void.class, Permission.class));
+    } catch (NoSuchMethodException | IllegalAccessException | ClassNotFoundException ignore) {
+    }
+    SYSTEM_GET_SECURITY_MANAGER = systemGetSecurityManagerHandle;
+    SECURITY_MANAGER_CHECK_PERMISSION = securityManagerCheckPermission;
+  }
+
   private enum ReadOnlyBehavior {
     ignore,
     transaction,
-    always;
+    always
   }
+
+  private final ResourceLock lock = new ResourceLock();
+  private final Condition lockCondition = lock.newCondition();
 
   //
   // Data initialized on construction:
@@ -106,6 +146,15 @@ public class PgConnection implements BaseConnection {
   private final ReadOnlyBehavior readOnlyBehavior;
 
   private /* @Nullable */ Throwable openStackTrace;
+
+  /**
+   * This field keeps finalize action alive, so its .finalize() method is called only
+   * when the connection itself becomes unreachable.
+   * Moving .finalize() to a different object allows JVM to release all the other objects
+   * referenced in PgConnection early.
+   */
+  private final PgConnectionCleaningAction finalizeAction;
+  private final Object leakHandle = new Object();
 
   /* Actual network handler */
   private final QueryExecutor queryExecutor;
@@ -121,7 +170,7 @@ public class PgConnection implements BaseConnection {
 
   private final TypeInfo typeCache;
 
-  private boolean disableColumnSanitiser = false;
+  private boolean disableColumnSanitiser;
 
   // Default statement prepare threshold.
   protected int prepareThreshold;
@@ -134,16 +183,21 @@ public class PgConnection implements BaseConnection {
   protected int defaultFetchSize;
 
   // Default forcebinary option.
-  protected boolean forcebinary = false;
+  protected boolean forcebinary;
+
+  /**
+   * Oids for which binary transfer should be disabled.
+   */
+  private final Set<? extends Integer> binaryDisabledOids;
 
   private int rsHoldability = ResultSet.CLOSE_CURSORS_AT_COMMIT;
-  private int savepointId = 0;
+  private int savepointId;
   // Connection's autocommit state.
   private boolean autoCommit = true;
   // Connection's readonly state.
-  private boolean readOnly = false;
+  private boolean readOnly;
   // Filter out database objects for which the current user has no privileges granted from the DatabaseMetaData
-  private boolean  hideUnprivilegedObjects ;
+  private final boolean  hideUnprivilegedObjects ;
   // Whether to include error details in logging and exceptions
   private final boolean logServerErrorDetail;
   // Bind String to UNSPECIFIED or VARCHAR?
@@ -152,11 +206,6 @@ public class PgConnection implements BaseConnection {
   // Current warnings; there might be more on queryExecutor too.
   private /* @Nullable */ SQLWarning firstWarning;
 
-  // Timer for scheduling TimerTasks for this connection.
-  // Only instantiated if a task is actually scheduled.
-  private volatile /* @Nullable */ Timer cancelTimer;
-
-  private /* @Nullable */ PreparedStatement checkConnectionQuery;
   /**
    * Replication protocol in current version postgresql(10devel) supports a limited number of
    * commands.
@@ -167,6 +216,7 @@ public class PgConnection implements BaseConnection {
 
   private final /* @Nullable */ String xmlFactoryFactoryClass;
   private /* @Nullable */ PGXmlFactoryFactory xmlFactoryFactory;
+  private final LazyCleaner.Cleanable<IOException> cleanable;
 
   final CachedQuery borrowQuery(String sql) throws SQLException {
     return queryExecutor.borrowQuery(sql);
@@ -201,18 +251,16 @@ public class PgConnection implements BaseConnection {
   //
   // Ctor.
   //
-  @SuppressWarnings({"method.invocation.invalid", "argument.type.incompatible"})
+  @SuppressWarnings({"method.invocation"})
   public PgConnection(HostSpec[] hostSpecs,
-                      String user,
-                      String database,
                       Properties info,
                       String url) throws SQLException {
     // Print out the driver version number
-    LOGGER.log(Level.FINE, org.postgresql.util.DriverInfo.DRIVER_FULL_NAME);
+    LOGGER.log(Level.FINE, DriverInfo.DRIVER_FULL_NAME);
 
     this.creatingURL = url;
 
-    this.readOnlyBehavior = getReadOnlyBehavior(PGProperty.READ_ONLY_MODE.get(info));
+    this.readOnlyBehavior = getReadOnlyBehavior(PGProperty.READ_ONLY_MODE.getOrDefault(info));
 
     setDefaultFetchSize(PGProperty.DEFAULT_ROW_FETCH_SIZE.getInt(info));
 
@@ -222,7 +270,7 @@ public class PgConnection implements BaseConnection {
     }
 
     // Now make the initial connection and set up local state
-    this.queryExecutor = ConnectionFactory.openConnection(hostSpecs, user, database, info);
+    this.queryExecutor = ConnectionFactory.openConnection(hostSpecs, info);
 
     // WARNING for unsupported servers (8.1 and lower are not supported)
     if (LOGGER.isLoggable(Level.WARNING) && !haveMinimumServerVersion(ServerVersion.v8_2)) {
@@ -239,12 +287,19 @@ public class PgConnection implements BaseConnection {
 
     this.hideUnprivilegedObjects = PGProperty.HIDE_UNPRIVILEGED_OBJECTS.getBoolean(info);
 
-    Set<Integer> binaryOids = getBinaryOids(info);
+    // get oids that support binary transfer
+    Set<Integer> binaryOids = getBinaryEnabledOids(info);
+    // get oids that should be disabled from transfer
+    binaryDisabledOids = getBinaryDisabledOids(info);
+    // if there are any, remove them from the enabled ones
+    if (!binaryDisabledOids.isEmpty()) {
+      binaryOids.removeAll(binaryDisabledOids);
+    }
 
     // split for receive and send for better control
-    Set<Integer> useBinarySendForOids = new HashSet<Integer>(binaryOids);
+    Set<Integer> useBinarySendForOids = new HashSet<>(binaryOids);
 
-    Set<Integer> useBinaryReceiveForOids = new HashSet<Integer>(binaryOids);
+    Set<Integer> useBinaryReceiveForOids = new HashSet<>(binaryOids);
 
     /*
      * Does not pass unit tests because unit tests expect setDate to have millisecond accuracy
@@ -265,11 +320,11 @@ public class PgConnection implements BaseConnection {
     // String -> text or unknown?
     //
 
-    String stringType = PGProperty.STRING_TYPE.get(info);
+    String stringType = PGProperty.STRING_TYPE.getOrDefault(info);
     if (stringType != null) {
-      if (stringType.equalsIgnoreCase("unspecified")) {
+      if ("unspecified".equalsIgnoreCase(stringType)) {
         bindStringAsVarchar = false;
-      } else if (stringType.equalsIgnoreCase("varchar")) {
+      } else if ("varchar".equalsIgnoreCase(stringType)) {
         bindStringAsVarchar = true;
       } else {
         throw new PSQLException(
@@ -293,12 +348,15 @@ public class PgConnection implements BaseConnection {
     int unknownLength = PGProperty.UNKNOWN_LENGTH.getInt(info);
 
     // Initialize object handling
-    typeCache = createTypeInfo(this, unknownLength);
+    @SuppressWarnings("argument")
+    TypeInfo typeCache = createTypeInfo(this, unknownLength);
+    this.typeCache = typeCache;
     initObjectTypes(info);
 
     if (PGProperty.LOG_UNCLOSED_CONNECTIONS.getBoolean(info)) {
       openStackTrace = new Throwable("Connection was created at this point:");
     }
+    finalizeAction = new PgConnectionCleaningAction(lock, openStackTrace, queryExecutor.getCloseAction());
     this.logServerErrorDetail = PGProperty.LOG_SERVER_ERROR_DETAIL.getBoolean(info);
     this.disableColumnSanitiser = PGProperty.DISABLE_COLUMN_SANITISER.getBoolean(info);
 
@@ -309,24 +367,28 @@ public class PgConnection implements BaseConnection {
 
     this.clientInfo = new Properties();
     if (haveMinimumServerVersion(ServerVersion.v9_0)) {
-      String appName = PGProperty.APPLICATION_NAME.get(info);
+      String appName = PGProperty.APPLICATION_NAME.getOrDefault(info);
       if (appName == null) {
         appName = "";
       }
       this.clientInfo.put("ApplicationName", appName);
     }
 
-    fieldMetadataCache = new LruCache<FieldMetadata.Key, FieldMetadata>(
-            Math.max(0, PGProperty.DATABASE_METADATA_CACHE_FIELDS.getInt(info)),
-            Math.max(0, PGProperty.DATABASE_METADATA_CACHE_FIELDS_MIB.getInt(info) * 1024L * 1024L),
+    fieldMetadataCache = new LruCache<>(
+        Math.max(0, PGProperty.DATABASE_METADATA_CACHE_FIELDS.getInt(info)),
+        Math.max(0, PGProperty.DATABASE_METADATA_CACHE_FIELDS_MIB.getInt(info) * 1024L * 1024L),
         false);
 
-    replicationConnection = PGProperty.REPLICATION.get(info) != null;
+    replicationConnection = PGProperty.REPLICATION.getOrDefault(info) != null;
 
-    xmlFactoryFactoryClass = PGProperty.XML_FACTORY_FACTORY.get(info);
+    xmlFactoryFactoryClass = PGProperty.XML_FACTORY_FACTORY.getOrDefault(info);
+    cleanable = LazyCleaner.getInstance().register(leakHandle, finalizeAction);
   }
 
-  private static ReadOnlyBehavior getReadOnlyBehavior(String property) {
+  private static ReadOnlyBehavior getReadOnlyBehavior(/* @Nullable */ String property) {
+    if (property == null) {
+      return ReadOnlyBehavior.transaction;
+    }
     try {
       return ReadOnlyBehavior.valueOf(property);
     } catch (IllegalArgumentException e) {
@@ -339,7 +401,7 @@ public class PgConnection implements BaseConnection {
   }
 
   private static Set<Integer> getSupportedBinaryOids() {
-    return new HashSet<Integer>(Arrays.asList(
+    return new HashSet<>(Arrays.asList(
         Oid.BYTEA,
         Oid.INT2,
         Oid.INT4,
@@ -366,28 +428,51 @@ public class PgConnection implements BaseConnection {
         Oid.UUID));
   }
 
-  private static Set<Integer> getBinaryOids(Properties info) throws PSQLException {
+  /**
+   * Gets all oids for which binary transfer can be enabled.
+   *
+   * @param info properties
+   * @return oids for which binary transfer can be enabled
+   * @throws PSQLException if any oid is not valid
+   */
+  private static Set<Integer> getBinaryEnabledOids(Properties info) throws PSQLException {
+    // check if binary transfer should be enabled for built-in types
     boolean binaryTransfer = PGProperty.BINARY_TRANSFER.getBoolean(info);
-    // Formats that currently have binary protocol support
-    Set<Integer> binaryOids = new HashSet<Integer>(32);
+    // get formats that currently have binary protocol support
+    Set<Integer> binaryOids = new HashSet<>(32);
     if (binaryTransfer) {
       binaryOids.addAll(SUPPORTED_BINARY_OIDS);
     }
-
-    String oids = PGProperty.BINARY_TRANSFER_ENABLE.get(info);
+    // add all oids which are enabled for binary transfer by the creator of the connection
+    String oids = PGProperty.BINARY_TRANSFER_ENABLE.getOrDefault(info);
     if (oids != null) {
       binaryOids.addAll(getOidSet(oids));
     }
-    oids = PGProperty.BINARY_TRANSFER_DISABLE.get(info);
-    if (oids != null) {
-      binaryOids.removeAll(getOidSet(oids));
-    }
-
     return binaryOids;
   }
 
-  private static Set<Integer> getOidSet(String oidList) throws PSQLException {
-    Set<Integer> oids = new HashSet<Integer>();
+  /**
+   * Gets all oids for which binary transfer should be disabled.
+   *
+   * @param info properties
+   * @return oids for which binary transfer should be disabled
+   * @throws PSQLException if any oid is not valid
+   */
+  private static Set<? extends Integer> getBinaryDisabledOids(Properties info)
+      throws PSQLException {
+    // check for oids that should explicitly be disabled
+    String oids = PGProperty.BINARY_TRANSFER_DISABLE.getOrDefault(info);
+    if (oids == null) {
+      return Collections.emptySet();
+    }
+    return getOidSet(oids);
+  }
+
+  private static Set<? extends Integer> getOidSet(String oidList) throws PSQLException {
+    if (oidList.isEmpty()) {
+      return Collections.emptySet();
+    }
+    Set<Integer> oids = new HashSet<>();
     StringTokenizer tokenizer = new StringTokenizer(oidList, ",");
     while (tokenizer.hasMoreTokens()) {
       String oid = tokenizer.nextToken();
@@ -412,6 +497,8 @@ public class PgConnection implements BaseConnection {
 
   private final TimestampUtils timestampUtils;
 
+  @Deprecated
+  @Override
   public TimestampUtils getTimestampUtils() {
     return timestampUtils;
   }
@@ -419,7 +506,22 @@ public class PgConnection implements BaseConnection {
   /**
    * The current type mappings.
    */
-  protected Map<String, Class<?>> typemap = new HashMap<String, Class<?>>();
+  protected Map<String, Class<?>> typemap = new HashMap<>();
+
+  /**
+   * Obtain the connection lock and return it. Callers must use try-with-resources to ensure that
+   * unlock() is performed on the lock.
+   */
+  final ResourceLock obtainLock() {
+    return lock.obtain();
+  }
+
+  /**
+   * Return the lock condition for this connection.
+   */
+  final Condition lockCondition() {
+    return lockCondition;
+  }
 
   @Override
   public Statement createStatement() throws SQLException {
@@ -443,10 +545,12 @@ public class PgConnection implements BaseConnection {
     return typemap;
   }
 
+  @Override
   public QueryExecutor getQueryExecutor() {
     return queryExecutor;
   }
 
+  @Override
   public ReplicationProtocol getReplicationProtocol() {
     return queryExecutor.getReplicationProtocol();
   }
@@ -497,39 +601,37 @@ public class PgConnection implements BaseConnection {
 
   @Override
   public void execSQLUpdate(String s) throws SQLException {
-    BaseStatement stmt = (BaseStatement) createStatement();
-    if (stmt.executeWithFlags(s, QueryExecutor.QUERY_NO_METADATA | QueryExecutor.QUERY_NO_RESULTS
-        | QueryExecutor.QUERY_SUPPRESS_BEGIN)) {
-      throw new PSQLException(GT.tr("A result was returned when none was expected."),
-          PSQLState.TOO_MANY_RESULTS);
-    }
+    try (BaseStatement stmt = (BaseStatement) createStatement()) {
+      if (stmt.executeWithFlags(s, QueryExecutor.QUERY_NO_METADATA | QueryExecutor.QUERY_NO_RESULTS
+          | QueryExecutor.QUERY_SUPPRESS_BEGIN)) {
+        throw new PSQLException(GT.tr("A result was returned when none was expected."),
+            PSQLState.TOO_MANY_RESULTS);
+      }
 
-    // Transfer warnings to the connection, since the user never
-    // has a chance to see the statement itself.
-    SQLWarning warnings = stmt.getWarnings();
-    if (warnings != null) {
-      addWarning(warnings);
+      // Transfer warnings to the connection, since the user never
+      // has a chance to see the statement itself.
+      SQLWarning warnings = stmt.getWarnings();
+      if (warnings != null) {
+        addWarning(warnings);
+      }
     }
-
-    stmt.close();
   }
 
   void execSQLUpdate(CachedQuery query) throws SQLException {
-    BaseStatement stmt = (BaseStatement) createStatement();
-    if (stmt.executeWithFlags(query, QueryExecutor.QUERY_NO_METADATA | QueryExecutor.QUERY_NO_RESULTS
-        | QueryExecutor.QUERY_SUPPRESS_BEGIN)) {
-      throw new PSQLException(GT.tr("A result was returned when none was expected."),
-          PSQLState.TOO_MANY_RESULTS);
-    }
+    try (BaseStatement stmt = (BaseStatement) createStatement()) {
+      if (stmt.executeWithFlags(query, QueryExecutor.QUERY_NO_METADATA | QueryExecutor.QUERY_NO_RESULTS
+          | QueryExecutor.QUERY_SUPPRESS_BEGIN)) {
+        throw new PSQLException(GT.tr("A result was returned when none was expected."),
+            PSQLState.TOO_MANY_RESULTS);
+      }
 
-    // Transfer warnings to the connection, since the user never
-    // has a chance to see the statement itself.
-    SQLWarning warnings = stmt.getWarnings();
-    if (warnings != null) {
-      addWarning(warnings);
+      // Transfer warnings to the connection, since the user never
+      // has a chance to see the statement itself.
+      SQLWarning warnings = stmt.getWarnings();
+      if (warnings != null) {
+        addWarning(warnings);
+      }
     }
-
-    stmt.close();
   }
 
   /**
@@ -581,6 +683,8 @@ public class PgConnection implements BaseConnection {
     return queryExecutor.getUser();
   }
 
+  @Override
+  @SuppressWarnings("deprecation") // support for deprecated Fastpath API
   public Fastpath getFastpathAPI() throws SQLException {
     checkClosed();
     if (fastpath == null) {
@@ -590,8 +694,10 @@ public class PgConnection implements BaseConnection {
   }
 
   // This holds a reference to the Fastpath API if already open
+  @SuppressWarnings("deprecation") // support for deprecated Fastpath API
   private /* @Nullable */ Fastpath fastpath;
 
+  @Override
   public LargeObjectManager getLargeObjectAPI() throws SQLException {
     checkClosed();
     if (largeobject == null) {
@@ -645,7 +751,7 @@ public class PgConnection implements BaseConnection {
       // point, etc).
 
       if (klass != null) {
-        obj = klass.newInstance();
+        obj = klass.getDeclaredConstructor().newInstance();
         obj.setType(type);
         if (byteValue != null && obj instanceof PGBinaryObject) {
           PGBinaryObject binObj = (PGBinaryObject) obj;
@@ -675,6 +781,7 @@ public class PgConnection implements BaseConnection {
     return new TypeInfoCache(conn, unknownLength);
   }
 
+  @Override
   public TypeInfo getTypeInfo() {
     return typeCache;
   }
@@ -684,29 +791,41 @@ public class PgConnection implements BaseConnection {
     try {
       addDataType(type, Class.forName(name).asSubclass(PGobject.class));
     } catch (Exception e) {
-      throw new RuntimeException("Cannot register new type: " + e);
+      throw new RuntimeException("Cannot register new type " + type, e);
     }
   }
 
   @Override
   public void addDataType(String type, Class<? extends PGobject> klass) throws SQLException {
     checkClosed();
+    // first add the data type to the type cache
     typeCache.addDataType(type, klass);
+    // then check if this type supports binary transfer
+    if (PGBinaryObject.class.isAssignableFrom(klass) && getPreferQueryMode() != PreferQueryMode.SIMPLE) {
+      // try to get an oid for this type (will return 0 if the type does not exist in the database)
+      int oid = typeCache.getPGType(type);
+      // check if oid is there and if it is not disabled for binary transfer
+      if (oid > 0 && !binaryDisabledOids.contains(oid)) {
+        // allow using binary transfer for receiving and sending of this type
+        queryExecutor.addBinaryReceiveOid(oid);
+        queryExecutor.addBinarySendOid(oid);
+      }
+    }
   }
 
   // This initialises the objectTypes hash map
   private void initObjectTypes(Properties info) throws SQLException {
     // Add in the types that come packaged with the driver.
     // These can be overridden later if desired.
-    addDataType("box", org.postgresql.geometric.PGbox.class);
-    addDataType("circle", org.postgresql.geometric.PGcircle.class);
-    addDataType("line", org.postgresql.geometric.PGline.class);
-    addDataType("lseg", org.postgresql.geometric.PGlseg.class);
-    addDataType("path", org.postgresql.geometric.PGpath.class);
-    addDataType("point", org.postgresql.geometric.PGpoint.class);
-    addDataType("polygon", org.postgresql.geometric.PGpolygon.class);
-    addDataType("money", org.postgresql.util.PGmoney.class);
-    addDataType("interval", org.postgresql.util.PGInterval.class);
+    addDataType("box", PGbox.class);
+    addDataType("circle", PGcircle.class);
+    addDataType("line", PGline.class);
+    addDataType("lseg", PGlseg.class);
+    addDataType("path", PGpath.class);
+    addDataType("point", PGpoint.class);
+    addDataType("polygon", PGpolygon.class);
+    addDataType("money", PGmoney.class);
+    addDataType("interval", PGInterval.class);
 
     Enumeration<?> e = info.propertyNames();
     while (e.hasMoreElements()) {
@@ -733,7 +852,7 @@ public class PgConnection implements BaseConnection {
   /**
    * <B>Note:</B> even though {@code Statement} is automatically closed when it is garbage
    * collected, it is better to close it explicitly to lower resource consumption.
-   *
+   * The spec says that calling close on a closed connection is a no-op.
    * {@inheritDoc}
    */
   @Override
@@ -743,9 +862,14 @@ public class PgConnection implements BaseConnection {
       // When that happens the connection is still registered in the finalizer queue, so it gets finalized
       return;
     }
-    releaseTimer();
-    queryExecutor.close();
     openStackTrace = null;
+    try {
+      cleanable.clean();
+    } catch (IOException e) {
+      throw new PSQLException(
+          GT.tr("Unable to close connection properly"),
+          PSQLState.UNKNOWN_STATE, e);
+    }
   }
 
   @Override
@@ -757,24 +881,28 @@ public class PgConnection implements BaseConnection {
   }
 
   @Override
-  public synchronized /* @Nullable */ SQLWarning getWarnings() throws SQLException {
-    checkClosed();
-    SQLWarning newWarnings = queryExecutor.getWarnings(); // NB: also clears them.
-    if (firstWarning == null) {
-      firstWarning = newWarnings;
-    } else if (newWarnings != null) {
-      firstWarning.setNextWarning(newWarnings); // Chain them on.
-    }
+  public /* @Nullable */ SQLWarning getWarnings() throws SQLException {
+    try (ResourceLock ignore = lock.obtain()) {
+      checkClosed();
+      SQLWarning newWarnings = queryExecutor.getWarnings(); // NB: also clears them.
+      if (firstWarning == null) {
+        firstWarning = newWarnings;
+      } else if (newWarnings != null) {
+        firstWarning.setNextWarning(newWarnings); // Chain them on.
+      }
 
-    return firstWarning;
+      return firstWarning;
+    }
   }
 
   @Override
-  public synchronized void clearWarnings() throws SQLException {
-    checkClosed();
-    //noinspection ThrowableNotThrown
-    queryExecutor.getWarnings(); // Clear and discard.
-    firstWarning = null;
+  public void clearWarnings() throws SQLException {
+    try (ResourceLock ignore = lock.obtain()) {
+      checkClosed();
+      //noinspection ThrowableNotThrown
+      queryExecutor.getWarnings(); // Clear and discard.
+      firstWarning = null;
+    }
   }
 
   @Override
@@ -900,10 +1028,12 @@ public class PgConnection implements BaseConnection {
     }
   }
 
+  @Override
   public TransactionState getTransactionState() {
     return queryExecutor.getTransactionState();
   }
 
+  @Override
   public int getTransactionIsolation() throws SQLException {
     checkClosed();
 
@@ -920,22 +1050,23 @@ public class PgConnection implements BaseConnection {
     }
 
     level = level.toUpperCase(Locale.US);
-    if (level.equals("READ COMMITTED")) {
+    if ("READ COMMITTED".equals(level)) {
       return Connection.TRANSACTION_READ_COMMITTED;
     }
-    if (level.equals("READ UNCOMMITTED")) {
+    if ("READ UNCOMMITTED".equals(level)) {
       return Connection.TRANSACTION_READ_UNCOMMITTED;
     }
-    if (level.equals("REPEATABLE READ")) {
+    if ("REPEATABLE READ".equals(level)) {
       return Connection.TRANSACTION_REPEATABLE_READ;
     }
-    if (level.equals("SERIALIZABLE")) {
+    if ("SERIALIZABLE".equals(level)) {
       return Connection.TRANSACTION_SERIALIZABLE;
     }
 
     return Connection.TRANSACTION_READ_COMMITTED; // Best guess.
   }
 
+  @Override
   public void setTransactionIsolation(int level) throws SQLException {
     checkClosed();
 
@@ -972,11 +1103,13 @@ public class PgConnection implements BaseConnection {
     }
   }
 
+  @Override
   public void setCatalog(String catalog) throws SQLException {
     checkClosed();
     // no-op
   }
 
+  @Override
   public String getCatalog() throws SQLException {
     checkClosed();
     return queryExecutor.getDatabase();
@@ -984,25 +1117,6 @@ public class PgConnection implements BaseConnection {
 
   public boolean getHideUnprivilegedObjects() {
     return hideUnprivilegedObjects;
-  }
-
-  /**
-   * <p>Overrides finalize(). If called, it closes the connection.</p>
-   *
-   * <p>This was done at the request of <a href="mailto:rachel@enlarion.demon.co.uk">Rachel
-   * Greenham</a> who hit a problem where multiple clients didn't close the connection, and once a
-   * fortnight enough clients were open to kill the postgres server.</p>
-   */
-  protected void finalize() throws Throwable {
-    try {
-      if (openStackTrace != null) {
-        LOGGER.log(Level.WARNING, GT.tr("Finalizing a Connection that was never closed:"), openStackTrace);
-      }
-
-      close();
-    } finally {
-      super.finalize();
-    }
   }
 
   /**
@@ -1081,7 +1195,7 @@ public class PgConnection implements BaseConnection {
   }
 
   // This is a cache of the DatabaseMetaData instance for this connection
-  protected java.sql./* @Nullable */ DatabaseMetaData metadata;
+  protected /* @Nullable */ DatabaseMetaData metadata;
 
   @Override
   public boolean isClosed() throws SQLException {
@@ -1112,6 +1226,7 @@ public class PgConnection implements BaseConnection {
    * Handler for transaction queries.
    */
   private class TransactionCommandHandler extends ResultHandlerBase {
+    @Override
     public void handleCompletion() throws SQLException {
       SQLWarning warning = getWarning();
       if (warning != null) {
@@ -1121,10 +1236,12 @@ public class PgConnection implements BaseConnection {
     }
   }
 
+  @Override
   public int getPrepareThreshold() {
     return prepareThreshold;
   }
 
+  @Override
   public void setDefaultFetchSize(int fetchSize) throws SQLException {
     if (fetchSize < 0) {
       throw new PSQLException(GT.tr("Fetch size must be a value greater to or equal to 0."),
@@ -1135,10 +1252,12 @@ public class PgConnection implements BaseConnection {
     LOGGER.log(Level.FINE, "  setDefaultFetchSize = {0}", fetchSize);
   }
 
+  @Override
   public int getDefaultFetchSize() {
     return defaultFetchSize;
   }
 
+  @Override
   public void setPrepareThreshold(int newThreshold) {
     this.prepareThreshold = newThreshold;
     LOGGER.log(Level.FINE, "  setPrepareThreshold = {0}", newThreshold);
@@ -1157,6 +1276,7 @@ public class PgConnection implements BaseConnection {
     typemap = map;
   }
 
+  @Override
   public Logger getLogger() {
     return LOGGER;
   }
@@ -1165,12 +1285,14 @@ public class PgConnection implements BaseConnection {
     return queryExecutor.getProtocolVersion();
   }
 
+  @Override
   public boolean getStringVarcharFlag() {
     return bindStringAsVarchar;
   }
 
   private /* @Nullable */ CopyManager copyManager;
 
+  @Override
   public CopyManager getCopyAPI() throws SQLException {
     checkClosed();
     if (copyManager == null) {
@@ -1179,14 +1301,17 @@ public class PgConnection implements BaseConnection {
     return copyManager;
   }
 
+  @Override
   public boolean binaryTransferSend(int oid) {
     return queryExecutor.useBinaryForSend(oid);
   }
 
+  @Override
   public int getBackendPID() {
     return queryExecutor.getBackendPID();
   }
 
+  @Override
   public boolean isColumnSanitiserDisabled() {
     return this.disableColumnSanitiser;
   }
@@ -1216,18 +1341,8 @@ public class PgConnection implements BaseConnection {
     queryExecutor.abort();
   }
 
-  private synchronized Timer getTimer() {
-    if (cancelTimer == null) {
-      cancelTimer = Driver.getSharedTimer().getTimer();
-    }
-    return cancelTimer;
-  }
-
-  private synchronized void releaseTimer() {
-    if (cancelTimer != null) {
-      cancelTimer = null;
-      Driver.getSharedTimer().releaseTimer();
-    }
+  private Timer getTimer() {
+    return finalizeAction.getTimer();
   }
 
   @Override
@@ -1238,10 +1353,7 @@ public class PgConnection implements BaseConnection {
 
   @Override
   public void purgeTimerTasks() {
-    Timer timer = cancelTimer;
-    if (timer != null) {
-      timer.purge();
-    }
+    finalizeAction.purgeTimerTasks();
   }
 
   @Override
@@ -1342,19 +1454,19 @@ public class PgConnection implements BaseConnection {
   @Override
   public Clob createClob() throws SQLException {
     checkClosed();
-    throw org.postgresql.Driver.notImplemented(this.getClass(), "createClob()");
+    throw Driver.notImplemented(this.getClass(), "createClob()");
   }
 
   @Override
   public Blob createBlob() throws SQLException {
     checkClosed();
-    throw org.postgresql.Driver.notImplemented(this.getClass(), "createBlob()");
+    throw Driver.notImplemented(this.getClass(), "createBlob()");
   }
 
   @Override
   public NClob createNClob() throws SQLException {
     checkClosed();
-    throw org.postgresql.Driver.notImplemented(this.getClass(), "createNClob()");
+    throw Driver.notImplemented(this.getClass(), "createNClob()");
   }
 
   @Override
@@ -1366,10 +1478,10 @@ public class PgConnection implements BaseConnection {
   @Override
   public Struct createStruct(String typeName, Object[] attributes) throws SQLException {
     checkClosed();
-    throw org.postgresql.Driver.notImplemented(this.getClass(), "createStruct(String, Object[])");
+    throw Driver.notImplemented(this.getClass(), "createStruct(String, Object[])");
   }
 
-  @SuppressWarnings({ "rawtypes", "unchecked" })
+  @SuppressWarnings({"rawtypes", "unchecked"})
   @Override
   public Array createArrayOf(String typeName, /* @Nullable */ Object elements) throws SQLException {
     checkClosed();
@@ -1424,14 +1536,13 @@ public class PgConnection implements BaseConnection {
           setNetworkTimeout(null, newNetworkTimeout);
         }
         if (replicationConnection) {
-          Statement statement = createStatement();
-          statement.execute("IDENTIFY_SYSTEM");
-          statement.close();
-        } else {
-          if (checkConnectionQuery == null) {
-            checkConnectionQuery = prepareStatement("");
+          try (Statement statement = createStatement()) {
+            statement.execute("IDENTIFY_SYSTEM");
           }
-          checkConnectionQuery.executeUpdate();
+        } else {
+          try (Statement checkConnectionQuery = createStatement()) {
+            ((PgStatement)checkConnectionQuery).execute("", QueryExecutor.QUERY_EXECUTE_AS_SIMPLE);
+          }
         }
         return true;
       } finally {
@@ -1454,7 +1565,7 @@ public class PgConnection implements BaseConnection {
     try {
       checkClosed();
     } catch (final SQLException cause) {
-      Map<String, ClientInfoStatus> failures = new HashMap<String, ClientInfoStatus>();
+      Map<String, ClientInfoStatus> failures = new HashMap<>();
       failures.put(name, ClientInfoStatus.REASON_UNKNOWN);
       throw new SQLClientInfoException(GT.tr("This connection has been closed."), failures, cause);
     }
@@ -1474,7 +1585,7 @@ public class PgConnection implements BaseConnection {
         sql.append("'");
         execSQLUpdate(sql.toString());
       } catch (SQLException sqle) {
-        Map<String, ClientInfoStatus> failures = new HashMap<String, ClientInfoStatus>();
+        Map<String, ClientInfoStatus> failures = new HashMap<>();
         failures.put(name, ClientInfoStatus.REASON_UNKNOWN);
         throw new SQLClientInfoException(
             GT.tr("Failed to set ClientInfo property: {0}", "ApplicationName"), sqle.getSQLState(),
@@ -1496,14 +1607,14 @@ public class PgConnection implements BaseConnection {
     try {
       checkClosed();
     } catch (final SQLException cause) {
-      Map<String, ClientInfoStatus> failures = new HashMap<String, ClientInfoStatus>();
+      Map<String, ClientInfoStatus> failures = new HashMap<>();
       for (Map.Entry<Object, Object> e : properties.entrySet()) {
         failures.put((String) e.getKey(), ClientInfoStatus.REASON_UNKNOWN);
       }
       throw new SQLClientInfoException(GT.tr("This connection has been closed."), failures, cause);
     }
 
-    Map<String, ClientInfoStatus> failures = new HashMap<String, ClientInfoStatus>();
+    Map<String, ClientInfoStatus> failures = new HashMap<>();
     for (String name : new String[]{"ApplicationName"}) {
       try {
         setClientInfo(name, properties.getProperty(name, null));
@@ -1534,9 +1645,10 @@ public class PgConnection implements BaseConnection {
 
   public <T> T createQueryObject(Class<T> ifc) throws SQLException {
     checkClosed();
-    throw org.postgresql.Driver.notImplemented(this.getClass(), "createQueryObject(Class<T>)");
+    throw Driver.notImplemented(this.getClass(), "createQueryObject(Class<T>)");
   }
 
+  @Override
   public boolean getLogServerErrorDetail() {
     return logServerErrorDetail;
   }
@@ -1556,28 +1668,23 @@ public class PgConnection implements BaseConnection {
     throw new SQLException("Cannot unwrap to " + iface.getName());
   }
 
+  @Override
   public /* @Nullable */ String getSchema() throws SQLException {
     checkClosed();
-    Statement stmt = createStatement();
-    try {
-      ResultSet rs = stmt.executeQuery("select current_schema()");
-      try {
+    try (Statement stmt = createStatement()) {
+      try (ResultSet rs = stmt.executeQuery("select current_schema()")) {
         if (!rs.next()) {
           return null; // Is it ever possible?
         }
         return rs.getString(1);
-      } finally {
-        rs.close();
       }
-    } finally {
-      stmt.close();
     }
   }
 
+  @Override
   public void setSchema(/* @Nullable */ String schema) throws SQLException {
     checkClosed();
-    Statement stmt = createStatement();
-    try {
+    try (Statement stmt = createStatement()) {
       if (schema == null) {
         stmt.executeUpdate("SET SESSION search_path TO DEFAULT");
       } else {
@@ -1588,17 +1695,17 @@ public class PgConnection implements BaseConnection {
         stmt.executeUpdate(sb.toString());
         LOGGER.log(Level.FINE, "  setSchema = {0}", schema);
       }
-    } finally {
-      stmt.close();
     }
   }
 
   public class AbortCommand implements Runnable {
+    @Override
     public void run() {
       abort();
     }
   }
 
+  @Override
   public void abort(Executor executor) throws SQLException {
     if (executor == null) {
       throw new SQLException("executor is null");
@@ -1613,6 +1720,7 @@ public class PgConnection implements BaseConnection {
     executor.execute(command);
   }
 
+  @Override
   public void setNetworkTimeout(/* @Nullable */ Executor executor /*not used*/, int milliseconds)
       throws SQLException {
     checkClosed();
@@ -1622,10 +1730,7 @@ public class PgConnection implements BaseConnection {
               PSQLState.INVALID_PARAMETER_VALUE);
     }
 
-    SecurityManager securityManager = System.getSecurityManager();
-    if (securityManager != null) {
-      securityManager.checkPermission(SQL_PERMISSION_NETWORK_TIMEOUT);
-    }
+    checkPermission(SQL_PERMISSION_NETWORK_TIMEOUT);
 
     try {
       queryExecutor.setNetworkTimeout(milliseconds);
@@ -1635,6 +1740,20 @@ public class PgConnection implements BaseConnection {
     }
   }
 
+  private void checkPermission(SQLPermission sqlPermissionNetworkTimeout) {
+    if (SYSTEM_GET_SECURITY_MANAGER != null && SECURITY_MANAGER_CHECK_PERMISSION != null) {
+      try {
+        Object securityManager = SYSTEM_GET_SECURITY_MANAGER.invoke();
+        if (securityManager != null) {
+          SECURITY_MANAGER_CHECK_PERMISSION.invoke(securityManager, sqlPermissionNetworkTimeout);
+        }
+      } catch (Throwable e) {
+        throw new RuntimeException(e);
+      }
+    }
+  }
+
+  @Override
   public int getNetworkTimeout() throws SQLException {
     checkClosed();
 
@@ -1652,8 +1771,6 @@ public class PgConnection implements BaseConnection {
 
     switch (holdability) {
       case ResultSet.CLOSE_CURSORS_AT_COMMIT:
-        rsHoldability = holdability;
-        break;
       case ResultSet.HOLD_CURSORS_OVER_COMMIT:
         rsHoldability = holdability;
         break;
@@ -1793,7 +1910,7 @@ public class PgConnection implements BaseConnection {
   }
 
   @Override
-  public final Map<String,String> getParameterStatuses() {
+  public final Map<String, String> getParameterStatuses() {
     return queryExecutor.getParameterStatuses();
   }
 
@@ -1818,9 +1935,9 @@ public class PgConnection implements BaseConnection {
     if (xmlFactoryFactory != null) {
       return xmlFactoryFactory;
     }
-    if (xmlFactoryFactoryClass == null || xmlFactoryFactoryClass.equals("")) {
+    if (xmlFactoryFactoryClass == null || "".equals(xmlFactoryFactoryClass)) {
       xmlFactoryFactory = DefaultPGXmlFactoryFactory.INSTANCE;
-    } else if (xmlFactoryFactoryClass.equals("LEGACY_INSECURE")) {
+    } else if ("LEGACY_INSECURE".equals(xmlFactoryFactoryClass)) {
       xmlFactoryFactory = LegacyInsecurePGXmlFactoryFactory.INSTANCE;
     } else {
       Class<?> clazz;
@@ -1837,7 +1954,9 @@ public class PgConnection implements BaseConnection {
             PSQLState.INVALID_PARAMETER_VALUE);
       }
       try {
-        xmlFactoryFactory = (PGXmlFactoryFactory) clazz.newInstance();
+        xmlFactoryFactory = clazz.asSubclass(PGXmlFactoryFactory.class)
+            .getDeclaredConstructor()
+            .newInstance();
       } catch (Exception ex) {
         throw new PSQLException(
             GT.tr("Could not instantiate xmlFactoryFactory: {0}", xmlFactoryFactoryClass),
