@@ -16,20 +16,29 @@ import org.postgresql.test.TestUtil;
 import org.postgresql.test.jdbc2.BaseTest4;
 import org.postgresql.util.PSQLState;
 
+import org.junit.BeforeClass;
 import org.junit.Test;
 
 import java.math.BigDecimal;
 import java.sql.CallableStatement;
+import java.sql.Connection;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.sql.Statement;
 import java.sql.Types;
+import java.time.LocalDate;
 
 /**
  * @author davec
  */
 public class Jdbc3CallableStatementTest extends BaseTest4 {
+  @BeforeClass
+  public static void beforeClass() throws Exception {
+    try (Connection con = TestUtil.openDB()) {
+      assumeCallableStatementsSupported(con);
+    }
+  }
 
   @Override
   public void setUp() throws Exception {
@@ -85,11 +94,30 @@ public class Jdbc3CallableStatementTest extends BaseTest4 {
         + "end;'"
         + "LANGUAGE plpgsql VOLATILE;"
     );
+    stmt.execute(
+        "CREATE OR REPLACE FUNCTION testspg__getBooleanWithoutArg() "
+                + "RETURNS boolean AS '  "
+                + "begin return true; end; ' LANGUAGE plpgsql;");
+    stmt.execute(
+            "CREATE OR REPLACE FUNCTION testspg__getBit1WithoutArg() "
+                    + "RETURNS bit(1) AS '  "
+                    + "begin return B''1''; end; ' LANGUAGE plpgsql;");
+    stmt.execute(
+            "CREATE OR REPLACE FUNCTION testspg__getBit2WithoutArg() "
+                    + "RETURNS bit(2) AS '  "
+                    + "begin return B''10''; end; ' LANGUAGE plpgsql;");
     if (TestUtil.haveMinimumServerVersion(con, ServerVersion.v11)) {
       stmt.execute(
           "CREATE OR REPLACE PROCEDURE inonlyprocedure(a IN int) AS 'BEGIN NULL; END;' LANGUAGE plpgsql");
       stmt.execute(
           "CREATE OR REPLACE PROCEDURE inoutprocedure(a INOUT int) AS 'BEGIN a := a + a; END;' LANGUAGE plpgsql");
+
+    }
+    if (TestUtil.haveMinimumServerVersion(con, ServerVersion.v14)) {
+      stmt.execute("create or replace PROCEDURE testspg_refcursor(bar date, out cur1 refcursor) "
+          + " as $$ declare begin "
+          + "OPEN cur1 FOR "
+          + "SELECT now() as now; end $$ language plpgsql");
     }
   }
 
@@ -104,9 +132,15 @@ public class Jdbc3CallableStatementTest extends BaseTest4 {
     stmt.execute("drop function myif(a INOUT int, b IN int)");
     stmt.execute("drop function mynoparams()");
     stmt.execute("drop function mynoparamsproc()");
+    stmt.execute("drop function testspg__getBooleanWithoutArg ();");
+    stmt.execute("drop function testspg__getBit1WithoutArg ();");
+    stmt.execute("drop function testspg__getBit2WithoutArg ();");
     if (TestUtil.haveMinimumServerVersion(con, ServerVersion.v11)) {
       stmt.execute("drop procedure inonlyprocedure(a IN int)");
       stmt.execute("drop procedure inoutprocedure(a INOUT int)");
+    }
+    if (TestUtil.haveMinimumServerVersion(con, ServerVersion.v14)) {
+      stmt.execute("DROP PROCEDURE testspg_refcursor(date);");
     }
     stmt.close();
     super.tearDown();
@@ -114,7 +148,6 @@ public class Jdbc3CallableStatementTest extends BaseTest4 {
 
   @Test
   public void testSomeInOut() throws Throwable {
-    assumeCallableStatementsSupported();
     CallableStatement call = con.prepareCall("{ call test_somein_someout(?,?,?) }");
 
     call.registerOutParameter(2, Types.VARCHAR);
@@ -126,7 +159,6 @@ public class Jdbc3CallableStatementTest extends BaseTest4 {
 
   @Test
   public void testNotEnoughParameters() throws Throwable {
-    assumeCallableStatementsSupported();
     CallableStatement cs = con.prepareCall("{call myiofunc(?,?)}");
     cs.setInt(1, 2);
     cs.registerOutParameter(2, Types.INTEGER);
@@ -174,8 +206,6 @@ public class Jdbc3CallableStatementTest extends BaseTest4 {
 
   @Test
   public void testNumeric() throws Throwable {
-    assumeCallableStatementsSupported();
-
     CallableStatement call = con.prepareCall("{ call Numeric_Proc(?,?,?) }");
 
     call.registerOutParameter(1, Types.NUMERIC, 15);
@@ -201,7 +231,6 @@ public class Jdbc3CallableStatementTest extends BaseTest4 {
 
   @Test
   public void testGetObjectDecimal() throws Throwable {
-    assumeCallableStatementsSupported();
     try {
       Statement stmt = con.createStatement();
       stmt.execute(
@@ -379,8 +408,32 @@ public class Jdbc3CallableStatementTest extends BaseTest4 {
   }
 
   @Test
+  public void testGetBit1WithoutArg() throws SQLException {
+    assumeNotSimpleQueryMode();
+    try (CallableStatement call = con.prepareCall("{ ? = call testspg__getBit1WithoutArg () }")) {
+      call.registerOutParameter(1, Types.BOOLEAN);
+      call.execute();
+      assertTrue(call.getBoolean(1));
+    }
+  }
+
+  @Test
+  public void testGetBit2WithoutArg() throws SQLException {
+    assumeNotSimpleQueryMode();
+    try (CallableStatement call = con.prepareCall("{ ? = call testspg__getBit2WithoutArg () }")) {
+      call.registerOutParameter(1, Types.BOOLEAN);
+      try {
+        call.execute();
+        assertTrue(call.getBoolean(1));
+        fail("#getBoolean(int) on bit(2) should throw");
+      } catch (SQLException e) {
+        assertEquals(PSQLState.CANNOT_COERCE.getState(), e.getSQLState());
+      }
+    }
+  }
+
+  @Test
   public void testGetObjectLongVarchar() throws Throwable {
-    assumeCallableStatementsSupported();
     try {
       Statement stmt = con.createStatement();
       stmt.execute("create temp table longvarchar_tab ( t text, null_val text )");
@@ -417,7 +470,7 @@ public class Jdbc3CallableStatementTest extends BaseTest4 {
       cstmt.close();
       cstmt = con.prepareCall("{ call lvarchar_in_name(?) }");
       String maxFloat = "3.4E38";
-      cstmt.setObject(1, new Float(maxFloat), Types.LONGVARCHAR);
+      cstmt.setObject(1, Float.valueOf(maxFloat), Types.LONGVARCHAR);
       cstmt.executeUpdate();
       cstmt.close();
       Statement stmt = con.createStatement();
@@ -549,11 +602,11 @@ public class Jdbc3CallableStatementTest extends BaseTest4 {
       cstmt.close();
       ResultSet rs = con.createStatement().executeQuery("select * from real_tab");
       assertTrue(rs.next());
-      Float oVal = new Float(intValues[0]);
-      Float rVal = new Float(rs.getObject(1).toString());
+      Float oVal = (float) intValues[0];
+      Float rVal = Float.valueOf(rs.getObject(1).toString());
       assertTrue(oVal.equals(rVal));
-      oVal = new Float(intValues[1]);
-      rVal = new Float(rs.getObject(2).toString());
+      oVal = (float) intValues[1];
+      rVal = Float.valueOf(rs.getObject(2).toString());
       assertTrue(oVal.equals(rVal));
       rs.close();
     } catch (Exception ex) {
@@ -659,7 +712,6 @@ public class Jdbc3CallableStatementTest extends BaseTest4 {
 
   @Test
   public void testGetObjectFloat() throws Throwable {
-    assumeCallableStatementsSupported();
     try {
       Statement stmt = con.createStatement();
       stmt.execute(createDecimalTab);
@@ -696,7 +748,6 @@ public class Jdbc3CallableStatementTest extends BaseTest4 {
 
   @Test
   public void testGetDouble01() throws Throwable {
-    assumeCallableStatementsSupported();
     try {
       Statement stmt = con.createStatement();
       stmt.execute("create temp table d_tab ( max_val float, min_val float, null_val float )");
@@ -737,7 +788,6 @@ public class Jdbc3CallableStatementTest extends BaseTest4 {
 
   @Test
   public void testGetDoubleAsReal() throws Throwable {
-    assumeCallableStatementsSupported();
     try {
       Statement stmt = con.createStatement();
       stmt.execute("create temp table d_tab ( max_val float, min_val float, null_val float )");
@@ -778,7 +828,6 @@ public class Jdbc3CallableStatementTest extends BaseTest4 {
 
   @Test
   public void testGetShort01() throws Throwable {
-    assumeCallableStatementsSupported();
     try {
       Statement stmt = con.createStatement();
       stmt.execute("create temp table short_tab ( max_val int2, min_val int2, null_val int2 )");
@@ -819,7 +868,6 @@ public class Jdbc3CallableStatementTest extends BaseTest4 {
 
   @Test
   public void testGetInt01() throws Throwable {
-    assumeCallableStatementsSupported();
     try {
       Statement stmt = con.createStatement();
       stmt.execute("create temp table i_tab ( max_val int, min_val int, null_val int )");
@@ -860,7 +908,6 @@ public class Jdbc3CallableStatementTest extends BaseTest4 {
 
   @Test
   public void testGetLong01() throws Throwable {
-    assumeCallableStatementsSupported();
     try {
       Statement stmt = con.createStatement();
       stmt.execute("create temp table l_tab ( max_val int8, min_val int8, null_val int8 )");
@@ -901,7 +948,6 @@ public class Jdbc3CallableStatementTest extends BaseTest4 {
 
   @Test
   public void testGetBoolean01() throws Throwable {
-    assumeCallableStatementsSupported();
     try {
       Statement stmt = con.createStatement();
       stmt.execute(createBitTab);
@@ -941,8 +987,17 @@ public class Jdbc3CallableStatementTest extends BaseTest4 {
   }
 
   @Test
+  public void testGetBooleanWithoutArg() throws SQLException {
+    assumeNotSimpleQueryMode();
+    try (CallableStatement call = con.prepareCall("{ ? = call testspg__getBooleanWithoutArg () }")) {
+      call.registerOutParameter(1, Types.BOOLEAN);
+      call.execute();
+      assertTrue(call.getBoolean(1));
+    }
+  }
+
+  @Test
   public void testGetByte01() throws Throwable {
-    assumeCallableStatementsSupported();
     try {
       Statement stmt = con.createStatement();
       stmt.execute("create temp table byte_tab ( max_val int2, min_val int2, null_val int2 )");
@@ -983,7 +1038,6 @@ public class Jdbc3CallableStatementTest extends BaseTest4 {
 
   @Test
   public void testMultipleOutExecutions() throws SQLException {
-    assumeCallableStatementsSupported();
     CallableStatement cs = con.prepareCall("{call myiofunc(?, ?)}");
     for (int i = 0; i < 10; i++) {
       cs.registerOutParameter(1, Types.INTEGER);
@@ -998,7 +1052,6 @@ public class Jdbc3CallableStatementTest extends BaseTest4 {
 
   @Test
   public void testSum() throws SQLException {
-    assumeCallableStatementsSupported();
     CallableStatement cs = con.prepareCall("{?= call mysum(?, ?)}");
     cs.registerOutParameter(1, Types.INTEGER);
     cs.setInt(2, 2);
@@ -1009,7 +1062,6 @@ public class Jdbc3CallableStatementTest extends BaseTest4 {
 
   @Test
   public void testFunctionNoParametersWithParentheses() throws SQLException {
-    assumeCallableStatementsSupported();
     CallableStatement cs = con.prepareCall("{?= call mynoparams()}");
     cs.registerOutParameter(1, Types.INTEGER);
     cs.execute();
@@ -1019,7 +1071,6 @@ public class Jdbc3CallableStatementTest extends BaseTest4 {
 
   @Test
   public void testFunctionNoParametersWithoutParentheses() throws SQLException {
-    assumeCallableStatementsSupported();
     CallableStatement cs = con.prepareCall("{?= call mynoparams}");
     cs.registerOutParameter(1, Types.INTEGER);
     cs.execute();
@@ -1029,7 +1080,6 @@ public class Jdbc3CallableStatementTest extends BaseTest4 {
 
   @Test
   public void testProcedureNoParametersWithParentheses() throws SQLException {
-    assumeCallableStatementsSupported();
     CallableStatement cs = con.prepareCall("{ call mynoparamsproc()}");
     cs.execute();
     TestUtil.closeQuietly(cs);
@@ -1037,7 +1087,6 @@ public class Jdbc3CallableStatementTest extends BaseTest4 {
 
   @Test
   public void testProcedureNoParametersWithoutParentheses() throws SQLException {
-    assumeCallableStatementsSupported();
     CallableStatement cs = con.prepareCall("{ call mynoparamsproc}");
     cs.execute();
     TestUtil.closeQuietly(cs);
@@ -1046,7 +1095,6 @@ public class Jdbc3CallableStatementTest extends BaseTest4 {
   @Test
   public void testProcedureInOnlyNativeCall() throws SQLException {
     assumeMinimumServerVersion(ServerVersion.v11);
-    assumeCallableStatementsSupported();
     CallableStatement cs = con.prepareCall("call inonlyprocedure(?)");
     cs.setInt(1, 5);
     cs.execute();
@@ -1056,7 +1104,6 @@ public class Jdbc3CallableStatementTest extends BaseTest4 {
   @Test
   public void testProcedureInOutNativeCall() throws SQLException {
     assumeMinimumServerVersion(ServerVersion.v11);
-    assumeCallableStatementsSupported();
     // inoutprocedure(a INOUT int) returns a*2 via the INOUT parameter
     CallableStatement cs = con.prepareCall("call inoutprocedure(?)");
     cs.setInt(1, 5);
@@ -1064,5 +1111,25 @@ public class Jdbc3CallableStatementTest extends BaseTest4 {
     cs.execute();
     assertEquals("call inoutprocedure(?) should return 10 (when input param = 5) via the INOUT parameter, but did not.", 10, cs.getInt(1));
     TestUtil.closeQuietly(cs);
+  }
+
+  @Test
+  public void testCall5Times() throws SQLException {
+    assumeMinimumServerVersion(ServerVersion.v14);
+    // call this enough times to change to binary mode
+    for (int i = 0; i < 6; i++) {
+      con.setAutoCommit(false);
+      try (CallableStatement proc = con.prepareCall("call testspg_refcursor( ? , ? )")) {
+        proc.setDate(1, java.sql.Date.valueOf(LocalDate.now()));
+        proc.registerOutParameter(2, Types.REF_CURSOR);
+        proc.execute();
+        try (ResultSet results = (ResultSet) proc.getObject(2)) {
+          while (results.next()) {
+            System.out.println("  " + i + " " + results.getTimestamp("now").toLocalDateTime());
+          }
+        }
+      }
+      con.commit();
+    }
   }
 }
